@@ -397,10 +397,9 @@ class Langstring extends Content {
         }
 
         $html .= "</div>\n";
+
         $html .= "<div class='admin_section_tools'>\n";
-
         $new_substring_submit_name = "langstrings_".$this->id."_add_new_entry";
-
         $html .= "<input type='submit' class='submit' name='$new_substring_submit_name' value='"._("Add new string")."'>";
         $html .= "</div>\n";
         $html .= "</li>\n";
