@@ -1,4 +1,8 @@
 2006-05-22 François Proulx <francois.proulx@gmail.com>
+	* Removed unnecessary debug message
+	* Fixed getNumOnlineUsers to count users by MAC on splash only nodes
+
+2006-05-22 François Proulx <francois.proulx@gmail.com>
 	* Added generateFromArray parameter (max_length)
 	* Restricts select content ui combo box to 40 chars
 	* Added Smarty plugin modifier.fsize_format.php
